tests/NormalTests/paczka1/fuzzy1/50343456.err
Error in line 1: RxmCBP S525 1,87
Error in line 2: S374 S791 97,50
Error in line 4: S374 S15 8,6
Error in line 3: RxmCBP S525 8,2
Error in line 6: vIzrDN S374 24,3
Error in line 5: S374 S374 77,4
Error in line 11: qw0Zki3v4 S15 30,0
Error in line 10: S374 S525 53,3
Error in line 8: RxmCBP S791 0,1
Error in line 28: S374 S15 248,7
Error in line 31: S374 S374 71,7
Error in line 23: RxmCBP S15 70,9
